Bug 236927 - nepomuk crash on logout
Summary: nepomuk crash on logout
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-09 03:08 UTC by SlashDevDsp
Modified: 2010-05-26 18:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SlashDevDsp 2010-05-09 03:08:39 UTC
Application: nepomukservicestub (0.2)
KDE Platform Version: 4.4.75 (KDE 4.4.75 (KDE 4.5 >= 20100505)) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-020632-generic x86_64
Distribution: Ubuntu 9.04

-- Information about the crash:
- What I was doing when the application crashed:
nepomuk crash dialog after logout, todays trunk compiled about 1 hr ago, with latest kde-qt git

-- Backtrace:
Application: Nepomuk Service Stub (nepomukservicestub), signal: Aborted
pthread_cond_wait@@GLIBC_2.3.2 ()
    at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
	in ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
[Current thread is 0 (LWP 29021)]

Thread 3 (Thread 0x7fbf8e2f1950 (LWP 29065)):
[KCrash Handler]
#6  0x00007fbfa3fc8fb5 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007fbfa3fcabc3 in *__GI_abort () at abort.c:88
#8  0x00007fbfa4008228 in __libc_message (do_abort=2, fmt=0x7fbfa40d2488 "*** glibc detected *** %s: %s: 0x%s ***\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:170
#9  0x00007fbfa400dcb8 in malloc_printerr (action=2, str=0x7fbfa40cfa86 "free(): invalid pointer", ptr=<value optimized out>) at malloc.c:5994
#10 0x00007fbfa5a6e359 in Soprano::FilterModel::executeQuery (this=0x247bba0, query=@0x6, language=4294967295, userQueryLanguage=@0x7fbfa40c88a0)
    at /home/kde-devel/kdesvn/kdesupport/soprano/soprano/filtermodel.cpp:164
#11 0x00007fbfa5aad895 in Soprano::NRLModel::executeQuery (this=0x247bba0, query=<value optimized out>, language=Soprano::Query::QueryLanguageSparql, userQueryLanguage=@0x7fbf8e2f04c0)
    at /home/kde-devel/kdesvn/kdesupport/soprano/soprano/nrlmodel.cpp:317
#12 0x00007fbfa5a6e359 in Soprano::FilterModel::executeQuery (this=0x23dd180, query=@0x6, language=4294967295, userQueryLanguage=@0x7fbfa40c88a0)
    at /home/kde-devel/kdesvn/kdesupport/soprano/soprano/filtermodel.cpp:164
#13 0x00007fbf96d8c879 in Soprano::Server::ServerConnection::Private::query (this=0x24d6f40) at /home/kde-devel/kdesvn/kdesupport/soprano/server/serverconnection.cpp:539
#14 0x00007fbf96d8e95d in Soprano::Server::ServerConnection::Private::_s_readNextCommand (this=0x24d6f40) at /home/kde-devel/kdesvn/kdesupport/soprano/server/serverconnection.cpp:228
#15 0x00007fbf96d8ea6d in Soprano::Server::ServerConnection::qt_metacall (this=0x249f770, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=<value optimized out>)
    at /home/kde-devel/kdesvn/build/kdesupport/soprano/server/serverconnection.moc:73
#16 0x00007fbfa70deab8 in QMetaObject::activate (sender=0x24e5de0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff)
    at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3295
#17 0x00007fbfa712ad35 in QIODevice::qt_metacall (this=0x24e5de0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fbf8e2f0770) at .moc/release-shared/moc_qiodevice.cpp:77
#18 0x00007fbfa2fdfa05 in QLocalSocket::qt_metacall (this=0x715d, _c=29065, _id=6, _a=0xffffffffffffffff) at .moc/release-shared/moc_qlocalsocket.cpp:81
#19 0x00007fbfa70deab8 in QMetaObject::activate (sender=0x24f88f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xffffffffffffffff)
    at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3295
#20 0x00007fbfa2fd7ecf in QAbstractSocketPrivate::canReadNotification (this=0x2510000) at /home/kde-devel/kdesvn/qt-copy/src/network/socket/qabstractsocket.cpp:639
#21 0x00007fbfa2fc70b1 in QReadNotifier::event (this=<value optimized out>, e=0x7189) at /home/kde-devel/kdesvn/qt-copy/src/network/socket/qnativesocketengine.cpp:1097
#22 0x00007fbfa4caa4ad in QApplicationPrivate::notify_helper (this=0x22cb080, receiver=0x24d8dc0, e=0x7fbf8e2f0db0) at /home/kde-devel/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:4302
#23 0x00007fbfa4cb1b34 in QApplication::notify (this=0x7fff2e0fe590, receiver=0x24d8dc0, e=0x7fbf8e2f0db0) at /home/kde-devel/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3706
#24 0x00007fbfa61d719b in KApplication::notify (this=0x7fff2e0fe590, receiver=0x24d8dc0, event=0x7fbf8e2f0db0) at /home/kde-devel/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:302
#25 0x00007fbfa70cadcb in QCoreApplication::notifyInternal (this=0x7fff2e0fe590, receiver=0x24d8dc0, event=0x7fbf8e2f0db0)
    at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:726
#26 0x00007fbfa70f57c9 in socketNotifierSourceDispatch (source=0x24f9050) at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:215
#27 0x00007fbfa34e220a in IA__g_main_context_dispatch (context=0x2502640) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:1814
#28 0x00007fbfa34e58e0 in g_main_context_iterate (context=0x2502640, block=1, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2448
#29 0x00007fbfa34e5a7c in IA__g_main_context_iteration (context=0x2502640, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#30 0x00007fbfa70f541c in QEventDispatcherGlib::processEvents (this=0x24f9c30, flags=<value optimized out>) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:412
#31 0x00007fbfa70c96b2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1909518432}) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#32 0x00007fbfa70c9a84 in QEventLoop::exec (this=0x7fbf8e2f0fe0, flags={i = -1909518336}) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#33 0x00007fbfa6fd5399 in QThread::exec (this=<value optimized out>) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#34 0x00007fbf96d8eaf8 in Soprano::Server::ServerConnection::run (this=0x249f770) at /home/kde-devel/kdesvn/kdesupport/soprano/server/serverconnection.cpp:151
#35 0x00007fbfa6fd7ba5 in QThreadPrivate::start (arg=0x249f770) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:248
#36 0x00007fbfa6d383ba in start_thread (arg=<value optimized out>) at pthread_create.c:297
#37 0x00007fbfa407bfcd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#38 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fbf8daf0950 (LWP 29078)):
#0  0x00007fbfa4072496 in *__GI___poll (fds=0x25364d0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fbfa34e577f in g_main_context_iterate (context=0x251d060, block=1, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2761
#2  0x00007fbfa34e5a7c in IA__g_main_context_iteration (context=0x251d060, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#3  0x00007fbfa70f5436 in QEventDispatcherGlib::processEvents (this=0x2512050, flags=<value optimized out>) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:414
#4  0x00007fbfa70c96b2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1917911136}) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007fbfa70c9a84 in QEventLoop::exec (this=0x7fbf8daeffe0, flags={i = -1917911040}) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#6  0x00007fbfa6fd5399 in QThread::exec (this=<value optimized out>) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qthread.cpp:487
#7  0x00007fbf96d8eaf8 in Soprano::Server::ServerConnection::run (this=0x24f8300) at /home/kde-devel/kdesvn/kdesupport/soprano/server/serverconnection.cpp:151
#8  0x00007fbfa6fd7ba5 in QThreadPrivate::start (arg=0x24f8300) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:248
#9  0x00007fbfa6d383ba in start_thread (arg=<value optimized out>) at pthread_create.c:297
#10 0x00007fbfa407bfcd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fbfa75ca750 (LWP 29021)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x00007fbfa6fd8b19 in QWaitCondition::wait (this=0x250fc30, mutex=0x250fc10, time=18446744073709551615) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:87
#2  0x00007fbfa6fd7c54 in QThread::wait (this=<value optimized out>, time=18446744073709551615) at /home/kde-devel/kdesvn/qt-copy/src/corelib/thread/qthread_unix.cpp:619
#3  0x00007fbf96d8f94e in ~ServerConnection (this=0x249f770) at /home/kde-devel/kdesvn/kdesupport/soprano/server/serverconnection.cpp:124
#4  0x00007fbf96d93d03 in ~LocalServerConnection (this=0x24e406c) at /home/kde-devel/kdesvn/kdesupport/soprano/server/localserver.cpp:30
#5  0x00007fbf96d89d6e in ~ServerCore (this=0x2395490) at /home/kde-devel/qt4/include/QtCore/qalgorithms.h:322
#6  0x00007fbf96fb3723 in ~Core (this=0x2395490) at /home/kde-devel/kdesvn/kdebase/runtime/nepomuk/services/storage/nepomukcore.cpp:47
#7  0x00007fbfa70d9c70 in QObjectPrivate::deleteChildren (this=0x23bd610) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:1986
#8  0x00007fbfa70e1963 in ~QObject (this=0x23bcfb0) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:975
#9  0x00007fbf96fb26d3 in ~Storage (this=0x24e406c) at /home/kde-devel/kdesvn/kdebase/runtime/nepomuk/services/storage/storage.cpp:52
#10 0x00007fbfa70d9c70 in QObjectPrivate::deleteChildren (this=0x23965d0) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:1986
#11 0x00007fbfa70e1963 in ~QObject (this=0x7fff2e0fe4e0) at /home/kde-devel/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:975
#12 0x0000000000403ac0 in main (argc=2, argv=0x7fff2e0fe998) at /home/kde-devel/kdesvn/kdebase/runtime/nepomuk/servicestub/main.cpp:152
261	in ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S

Reported using DrKonqi
Comment 1 Sebastian Trueg 2010-05-26 18:04:52 UTC
SVN commit 1130850 by trueg:

Fixed memory management of the repository. Now it will be deleted after all server connections.

BUG: 236927


 M  +14 -6     nepomukcore.cpp  
 M  +2 -0      nepomukcore.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130850