Fixed memory management of the repository. Now it will be deleted after all server connections.

BUG: 236927

svn path=/trunk/KDE/kdebase/runtime/; revision=1130850